Replaced Collectors.toList() with Stream.toList() to obtain an immutable list. Fix #21